--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="lg:grid grid-cols-2 gap-4 mt-4 lg:bg-gray-200">
                     <div class="lg:col-span-1 mx-3">
                         <div class="lg:col-span-1  lg:mt-20">
-                            <div class=" text-xl lg:text-4xl  font-semibold">OnePlus TV 65 Q2 Pro</div>
+                            <div class=" text-xl lg:text-4xl  font-semibold">OnePlus PAD</div>
                         </div>
 
                         <div class=" lg:col-span-">
